[tool.poetry]
name = "renamer"
version = "0.1.0"
description = "cli to help with renaming original ingested files with missing or wrong extension"
authors = ["Claus Juhl Knudsen <cjk@aarhus.dk>"]

[tool.poetry.dependencies]
python = ">=3.8, <"
xmltodict = "^0.13.0"
requests = "^2.28.1"

[tool.poetry.scripts]
renamer = 'renamer:main'

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
