[tool.poetry]
name = "renamer"
version = "0.1.4"
description = "cli to help with renaming original ingested files with missing or wrong extension"
authors = ["Claus Juhl Knudsen <cjk@aarhus.dk>"]

[tool.poetry.dependencies]
python = ">=3.8, <=3.11"
xmltodict = "^0.13.0"
requests = "^2.28.1"

[tool.poetry.scripts]
renamer = 'renamer.cli:main'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
